Universal selector add to App.css to fix app spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+}
+
 .App {
-  padding: 0.1rem;
+  padding: 0;
   text-align: center;
   background-color: #7a8c98;
 }
