--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,6 +2,7 @@
     background-color: #1e293b;
     color: #ffffff;
     padding: 2rem 0;
+    width: 100%;
   }
   
   .footer h3 {
@@ -12,40 +13,10 @@
     text-align: center;
     margin: 1rem 0;
   }
-  
-  .footer-body {
-    text-align: center;
-  }
-  
-  .footer-icons {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-  }
-  
-  .social-icons {
-    display: inline-block;
-  }
-  
-  .icon-colour {
-    color: #cbd5e1;
-    font-size: 2rem;
-    transition: color 0.3s ease;
-  }
-  
-  .icon-colour:hover {
-    color: #2563eb;
-  }
-  
-  .home-social-icons {
-    text-decoration: none;
-  }
+
   
   @media (max-width: 768px) {
-    .footer-copywright,
-    .footer-body {
+    .footer-copywright {
       text-align: center;
     }
   }
