--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -86,10 +86,15 @@
 }
 
 .icon {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   padding: 0.5rem;
   padding-top: 1rem;
   color: whitesmoke;
+  transition: color 0.3s ease-in;
+}
+
+.icon:hover {
+  color: #2563eb;
 }
 
 @media (max-width: 768px) {
